5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4151/executions/1638_2730.log
== TEST (2019-04-13 22:32:39) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if(x>0,y>0):
	print(Superiores)
else:
	print(Inferiores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(Superiores)
NameError: name 'Superiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:41:37) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if((x>0)&(y>0)):
	print(Superiores)
if((x<0)&(y>0)):
	print(Superiores)
if((x>0)&(y<0)):
	print(Inferiores)
if((x<0)&(y<0)):
	print(Inferiores)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print(Inferiores)
NameError: name 'Inferiores' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:43:25) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if((x>0)&(y>0)):
	print("Superiores")
if((x<0)&(y>0)):
	print("Superiores"")
if((x>0)&(y<0)):
	print("Inferiores")
if((x<0)&(y<0)):
	print("Inferiores")

-- ERROR:
File "XXXX", line 7
    print("Superiores"")
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:43:29) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if((x>0)&(y>0)):
	print("Superiores")
if((x<0)&(y>0)):
	print("Superiores"")
if((x>0)&(y<0)):
	print("Inferiores")
if((x<0)&(y<0)):
	print("Inferiores")

-- ERROR:
File "XXXX", line 7
    print("Superiores"")
                       ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 22:43:50) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if((x>0)&(y>0)):
	print("Superiores")
if((x<0)&(y>0)):
	print("Superiores")
if((x>0)&(y<0)):
	print("Inferiores")
if((x<0)&(y<0)):
	print("Inferiores")

-- OUTPUT:
Inferiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 22:44:14) 
-- CODE:
x=float(input("x: "))
y=float(input("y: "))

if((x>0)&(y>0)):
	print("Superiores")
if((x<0)&(y>0)):
	print("Superiores")
if((x>0)&(y<0)):
	print("Inferiores")
if((x<0)&(y<0)):
	print("Inferiores")

-- EXECUTION TIME:
0.154485
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
